fix cvv help-icon alignment

--- a/src/components/BillingDetails.css
+++ b/src/components/BillingDetails.css
@@ -71,7 +71,11 @@
   width: 15px;
   height: 15px;
   padding-left: 5px;
-  vertical-align: middle;
+}
+
+.cvv-label-wrapper {
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 440px) {
